[gd_scene load_steps=7 format=2]

[ext_resource path="res://Minigames/RichTextLabel.gd" type="Script" id=1]
[ext_resource path="res://Dialogue/prstart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Music and Sounds/Menu Select.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 10
extra_spacing_bottom = 8
font_data = ExtResource( 2 )

[node name="Polygon2D" type="Polygon2D"]
position = Vector2( -336, -292.156 )
scale = Vector2( 1, 0.96875 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 640, 475, 640, 379, 32, 379, 32, 475 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 368.0
margin_top = 299.0
margin_right = 640.0
margin_bottom = 379.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 272.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "A."

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 272.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "B."

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 272.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "C."

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 63.0
margin_right = 272.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "D."

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 48.0
margin_top = 395.0
margin_right = 624.0
margin_bottom = 459.0
custom_fonts/normal_font = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.025
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Button" to="RichTextLabel" method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="RichTextLabel" method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="RichTextLabel" method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="RichTextLabel" method="_on_Button4_pressed"]
[connection signal="timeout" from="Timer" to="RichTextLabel" method="_on_Timer_timeout"]
